# hsr_exploration

./: .gitignore  .gitmodules  BUILD-DOCKER-IMAGE.sh  CONTRIBUTING.md  INCL-SUDO-ENV.sh  INCL-USER-ENV.sh  LICENSE  README.md  RUN-DOCKER-CONTAINER.sh  RUN-TERMINATOR-TERMINAL.sh  SETUP-DEVEL-MACHINE.sh  hsr-setting  params.yaml
catkin_ws/src/avoidance_server/: CMakeLists.txt  package.xml
catkin_ws/src/avoidance_server/include/: avoidance_server.h
catkin_ws/src/avoidance_server/launch/: avoidance_server.launch
catkin_ws/src/avoidance_server/scripts/: avoid_move_server.py  avoidance_move_server_node.py
catkin_ws/src/avoidance_server/src/: avoidance_server.cpp  avoidance_server_node.cpp
catkin_ws/src/avoidance_server/srv/: avoidance_move_server.srv  avoidance_server.srv
catkin_ws/src/hsr_behaviors/hsr_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/hsr_behaviors/hsr_flexbe_behaviors/manifest/: example_behavior.xml  experimentrsj.xml  grasp_object_on_the_floor.xml  hello_world_demo.xml  hsr_analyseobjectlocationtidyupstate.xml  hsr_bring_me_c2_502.xml  hsr_choose_person_test.xml  hsr_delete_model.xml  hsr_drawer_open_test.xml  hsr_dynamic_speak_test.xml  hsr_escape_test.xml  hsr_experiment_rsj.xml  hsr_fetchobject.xml  hsr_fetchobjectlongtable.xml  hsr_fetchobjectnew.xml  hsr_fetchobjecttalltable.xml  hsr_grasp_object_on_the_floor.xml  hsr_initialize_for_object_search.xml  hsr_listen_test.xml  hsr_move.xml  hsr_move_and_sweep.xml  hsr_move_base_around.xml  hsr_move_to.xml  hsr_object_search_pose.xml  hsr_object_search_simulation.xml  hsr_open_campus_2019.xml  hsr_put_test.xml  hsr_qr_speak.xml  hsr_robot_inspection.xml  hsr_robot_inspection_no_door.xml  hsr_search_object_on_the_table.xml  hsr_search_object_sim.xml  hsr_set_base_pose_by_tf_name_test.xml  hsr_setup_for_experiment.xml  hsr_spawn_object.xml  hsr_speak_state_test.xml  hsr_sweep_test.xml  hsr_task2a.xml  hsr_test_analyseobjectlocationtidyupstate.xml  hsr_test_demo.xml  (+30 more)
catkin_ws/src/hsr_behaviors/hsr_flexbe_behaviors/src/hsr_flexbe_behaviors/: experimentrsj_sm.py  grasp_object_on_the_floor_sm.py  hello_world_demo_sm.py  hsr_analyseobjectlocationtidyupstate_sm.py  hsr_bring_me_c2_502_sm.py  hsr_choose_person_test_sm.py  hsr_delete_model_sm.py  hsr_drawer_open_test_sm.py  hsr_dynamic_speak_test_sm.py  hsr_escape_test_sm.py  hsr_experiment_rsj_sm.py  hsr_fetchobject_sm.py  hsr_fetchobjectlongtable_sm.py  hsr_fetchobjectnew_sm.py  hsr_fetchobjecttalltable_sm.py  hsr_grasp_object_on_the_floor_sm.py  hsr_initialize_for_object_search_sm.py  hsr_listen_test_sm.py  hsr_move_and_sweep_sm.py  hsr_move_base_around_sm.py  hsr_move_sm.py  hsr_move_to_sm.py  hsr_object_search_pose_sm.py  hsr_object_search_simulation_sm.py  hsr_open_campus_2019_backup_sm.py  hsr_open_campus_2019_sm.py  hsr_open_campus_tidy_up_floor_sm.py  hsr_put_test_sm.py  hsr_qr_speak_sm.py  hsr_robot_inspection_no_door_sm.py  hsr_robot_inspection_sm.py  hsr_search_object_on_the_table_sm.py  hsr_search_object_sim_sm.py  hsr_set_base_pose_by_tf_name_test_sm.py  hsr_setup_for_experiment_sm.py  hsr_spawn_object_sm.py  hsr_speak_state_test_sm.py  hsr_sweep_test_sm.py  hsr_task2a_sm.py  hsr_test_analyseobjectlocationtidyupstate_sm.py  (+33 more)
catkin_ws/src/hsr_behaviors/hsr_flexbe_states/: CMakeLists.txt  package.xml
catkin_ws/src/hsr_behaviors/hsr_flexbe_states/config/: robot_accessible_area.json  target_object_area.json  target_object_area_01.json  temp.json
catkin_ws/src/hsr_behaviors/hsr_flexbe_states/src/hsr_flexbe_states/: hsr_analyse_command_state.py  hsr_analyse_object_bringme_state.py  hsr_analyse_object_location_tidyup_state.py  hsr_check_elapsed_global_time_state.py  hsr_check_elapsed_time_state.py  hsr_choose_person_state.py  hsr_delete_model_state.py  hsr_escape_by_twist_state.py  hsr_fetch_object_dyn_state.py  hsr_fetch_object_interface_state.py  hsr_fetch_object_state.py  hsr_generating_candidates_state.py  hsr_get_next_viewpoint.py  hsr_get_object_pose_state.py  hsr_get_random_robot_pose.py  hsr_get_random_target_pose_state.py  hsr_head_move_state.py  hsr_move_base_state.py  hsr_move_state_for_gazebo.py  hsr_move_to_go_state.py  hsr_move_to_neutral_state.py  hsr_move_to_viewpoint_state.py  hsr_object_detection_state.py  (+29 more)
catkin_ws/src/hsr_launch/: README.md  package.xml
catkin_ws/src/hsr_launch/config/move_base/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml  planner.yaml
catkin_ws/src/hsr_launch/launch/: darknet_ros_default.launch  darknet_ros_robocup_2019.launch  hsr_search.launch  hsr_search_sim.launch  hsr_teleop_twist_keyboard.launch  hsrb_common.launch  hsrb_gazebo_common.launch  hsrb_mock_home_world.launch  octomap_server.launch  sdewg_chatter_default.launch  sdewg_gazebo_default.launch  sdewg_rviz_default.launch  tmc_gazebo_default.launch
catkin_ws/src/hsr_launch/launch/include/: hsrb_navigation.launch  move_base.launch
catkin_ws/src/hsr_launch/world/: tidy_up1.world
catkin_ws/src/sdewg_chatter/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sdewg_chatter/launch/: sdewg_chatter_default.launch  sdewg_chatter_rosbridge.launch  sdewg_chatter_rqt.launch
catkin_ws/src/sdewg_chatter/src/: sdewg_chatter.html  sdewg_listener.cpp  sdewg_talker.cpp
catkin_ws/src/viewpoint_planner_3d/: CMakeLists.txt  LICENSE.txt  constmap_plugins.xml  package.xml
catkin_ws/src/viewpoint_planner_3d/include/generating_candidates/: generating_candidates.h
catkin_ws/src/viewpoint_planner_3d/include/viewpoint_evaluator/: viewpoint_evaluator.h
catkin_ws/src/viewpoint_planner_3d/launch/: viewpoint_planner_3d.launch
catkin_ws/src/viewpoint_planner_3d/scripts/: dijkstra_server_node.py  viewpoint_planner_viewer.py
catkin_ws/src/viewpoint_planner_3d/src/generating_candidates/: generating_candidates.cpp  generating_candidates_server.cpp
catkin_ws/src/viewpoint_planner_3d/src/viewpoint_evaluator/: viewpoint_evaluator.cpp  viewpoint_evaluator_server.cpp
catkin_ws/src/viewpoint_planner_3d/srv/: generating_candidates.srv  get_candidates.srv  get_next_viewpoint.srv  get_shortest_path_length.srv
(+108 files in other folders)
