<?xml version="1.0"?>
<package format="2">
  <name>hsr_launch</name>
  <version>1.0.0</version>
  <description>The 'hsr_launch' package coordinates the robot tasks and behaviors across all packages using shared launch files.</description>

  <maintainer email="lotfi.elhafi@gmail.com">Lotfi El Hafi</maintainer>
  <license>Toyota HSR Community</license>
  <url type="website">https://hsr-sde-wg.gitlab.io/</url>
  <author email="lotfi.elhafi@gmail.com">Lotfi El Hafi</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
